# droproute

./: .gitignore  README.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml
scripts/: bootstrap.ps1
src/droproute/: cli.py  config_loader.py  logging_setup.py  models.py  service.py
src/droproute/core/: matcher.py  mover.py  router.py  stability.py  watcher.py
tests/: test_config_loader.py  test_matcher.py  test_mover.py  test_stability.py
